--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -5,6 +5,8 @@ date: "March 9, 2018"
 output: 
   html_document:
     code_folding: hide
+    
+
 ---
 
 ```{r, include=FALSE, messages=FALSE, warning=FALSE}
@@ -136,38 +138,39 @@ party_contribution <- inner_join(party_contribution, mid_contri)
 
 ```
 
+
 ```{r, message=FALSE, warning=FALSE, echo=FALSE}
 # create a map showing total contribution for each party 
 
 # mapping "no party name" contribution
-non <- party_contribution %>% filter(cand_party_affiliation == "")
-non_mapping <- ggplot(non, aes(map_id = cand_state)) +
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = contri_party), map = fifty_states) +
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to No Party Name") +
-  theme(legend.position = "bottom",
-        panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
-  labs(fill = "Amount of Contribution") +
-  scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
+# non <- party_contribution %>% filter(cand_party_affiliation == "")
+# non_mapping <- ggplot(non, aes(map_id = cand_state)) +
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = contri_party), map = fifty_states) +
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) +
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "", title = "Contribution to No Party Name") +
+#   theme(legend.position = "bottom",
+#         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
+#   labs(fill = "Amount of Contribution") +
+#   scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
 
 #mapping CON's contribution
-con <- party_contribution %>% filter(cand_party_affiliation == "CON")
-con_mapping <- ggplot(con, aes(map_id = cand_state)) +
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = contri_party), map = fifty_states) +
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to Constitution") +
-  theme(legend.position = "bottom",
-        panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
-  labs(fill = "Amount of Contribution") +
-  scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
+# con <- party_contribution %>% filter(cand_party_affiliation == "CON")
+# con_mapping <- ggplot(con, aes(map_id = cand_state)) +
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = contri_party), map = fifty_states) +
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) +
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "", title = "Contribution to Constitution") +
+#   theme(legend.position = "bottom",
+#         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
+#   labs(fill = "Amount of Contribution") +
+#   scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
 
 
 #mapping DEM's contribution
@@ -187,131 +190,131 @@ dem_mapping <- ggplot(dem, aes(map_id = cand_state)) +
 
 
 #mapping DFL's contribution 
-dfl <- party_contribution %>% filter(cand_party_affiliation == "DFL")
-dfl_mapping <- ggplot(dfl, aes(map_id = cand_state)) +
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = contri_party), map = fifty_states) +
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to Democratic Farmer Labor Party") +
-  theme(legend.position = "bottom",
-        panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
-  labs(fill = "Amount of Contribution") +
-  scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
-
-
-#mapping GRE's contribution
-gre <- party_contribution %>% filter(cand_party_affiliation == "GRE")
-gre_mapping <- ggplot(gre, aes(map_id = cand_state)) +
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = contri_party), map = fifty_states) +
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to Green") +
-  theme(legend.position = "bottom",
-        panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
-  labs(fill = "Amount of Contribution") +
-  scale_fill_continuous (breaks = c(250, 4400, 8608), labels = c("0.25K", "4.4K", "8.6K"), low = "#B0E2FF", high = "#607B8B")
-
-
-#mapping IAP's contribution
-iap <- party_contribution %>% filter(cand_party_affiliation == "IAP")
-iap_mapping <- ggplot(iap, aes(map_id = cand_state)) +
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = contri_party), map = fifty_states) +
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to Independent American Party") +
-  theme(legend.position = "bottom",
-        panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
-  labs(fill = "Amount of Contribution") +
-  scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
-
-
-#mapping IND's contribution
-ind <- party_contribution %>% filter(cand_party_affiliation == "IND")
-ind_mapping <- ggplot(gre, aes(map_id = cand_state)) +
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = contri_party), map = fifty_states) +
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to Independent") +
-  theme(legend.position = "bottom",
-        panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
-  labs(fill = "Amount of Contribution") +
-  scale_fill_continuous (breaks = c(-1000, 2000000, 4175660), labels = c("-1K", "2000K", "4180K"), low = "#B0E2FF", high = "#607B8B")
-
-
-#mapping LIB's contribution
-lib <- party_contribution %>% filter(cand_party_affiliation == "LIB")
-lib_mapping <- ggplot(lib, aes(map_id = cand_state)) +
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = contri_party), map = fifty_states) +
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to Libertarian") +
-  theme(legend.position = "bottom",
-        panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
-  labs(fill = "Amount of Contribution") +
-  scale_fill_continuous (breaks = c(800, 280000, 555314), labels = c("0.8K", "280K", "555K"), low = "#B0E2FF", high = "#607B8B")
-
-
-#mapping NNE's contribution
-nne <- party_contribution %>% filter(cand_party_affiliation == "NNE")
-nne_mapping <- ggplot(lib, aes(map_id = cand_state)) +
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = contri_party), map = fifty_states) +
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to None") +
-  theme(legend.position = "bottom",
-        panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
-  labs(fill = "Amount of Contribution") +
-  scale_fill_continuous (breaks = c(11725, 320000, 520000), labels = c("11K", "32K", "52K"), low = "#B0E2FF", high = "#607B8B")
-
-
-#mappping NPA's contribution
-npa <- party_contribution %>% filter(cand_party_affiliation == "NPA")
-npa_mapping <- ggplot(npa, aes(map_id = cand_state)) +
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = contri_party), map = fifty_states) +
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to No party Affiliation") +
-  theme(legend.position = "bottom",
-        panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
-  labs(fill = "Amount of Contribution") +
-  scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
+# dfl <- party_contribution %>% filter(cand_party_affiliation == "DFL")
+# dfl_mapping <- ggplot(dfl, aes(map_id = cand_state)) +
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = contri_party), map = fifty_states) +
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) +
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "", title = "Contribution to Democratic Farmer Labor Party") +
+#   theme(legend.position = "bottom",
+#         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
+#   labs(fill = "Amount of Contribution") +
+#   scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
+# 
+# 
+# #mapping GRE's contribution
+# gre <- party_contribution %>% filter(cand_party_affiliation == "GRE")
+# gre_mapping <- ggplot(gre, aes(map_id = cand_state)) +
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = contri_party), map = fifty_states) +
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) +
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "", title = "Contribution to Green") +
+#   theme(legend.position = "bottom",
+#         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
+#   labs(fill = "Amount of Contribution") +
+#   scale_fill_continuous (breaks = c(250, 4400, 8608), labels = c("0.25K", "4.4K", "8.6K"), low = "#B0E2FF", high = "#607B8B")
+# 
+# 
+# #mapping IAP's contribution
+# iap <- party_contribution %>% filter(cand_party_affiliation == "IAP")
+# iap_mapping <- ggplot(iap, aes(map_id = cand_state)) +
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = contri_party), map = fifty_states) +
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) +
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "", title = "Contribution to Independent American Party") +
+#   theme(legend.position = "bottom",
+#         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
+#   labs(fill = "Amount of Contribution") +
+#   scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
+# 
+# 
+# #mapping IND's contribution
+# ind <- party_contribution %>% filter(cand_party_affiliation == "IND")
+# ind_mapping <- ggplot(gre, aes(map_id = cand_state)) +
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = contri_party), map = fifty_states) +
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) +
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "", title = "Contribution to Independent") +
+#   theme(legend.position = "bottom",
+#         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
+#   labs(fill = "Amount of Contribution") +
+#   scale_fill_continuous (breaks = c(-1000, 2000000, 4175660), labels = c("-1K", "2000K", "4180K"), low = "#B0E2FF", high = "#607B8B")
+# 
+# 
+# #mapping LIB's contribution
+# lib <- party_contribution %>% filter(cand_party_affiliation == "LIB")
+# lib_mapping <- ggplot(lib, aes(map_id = cand_state)) +
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = contri_party), map = fifty_states) +
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) +
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "", title = "Contribution to Libertarian") +
+#   theme(legend.position = "bottom",
+#         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
+#   labs(fill = "Amount of Contribution") +
+#   scale_fill_continuous (breaks = c(800, 280000, 555314), labels = c("0.8K", "280K", "555K"), low = "#B0E2FF", high = "#607B8B")
+# 
+# 
+# #mapping NNE's contribution
+# nne <- party_contribution %>% filter(cand_party_affiliation == "NNE")
+# nne_mapping <- ggplot(lib, aes(map_id = cand_state)) +
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = contri_party), map = fifty_states) +
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) +
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "", title = "Contribution to None") +
+#   theme(legend.position = "bottom",
+#         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
+#   labs(fill = "Amount of Contribution") +
+#   scale_fill_continuous (breaks = c(11725, 320000, 520000), labels = c("11K", "32K", "52K"), low = "#B0E2FF", high = "#607B8B")
+# 
+# 
+# #mappping NPA's contribution
+# npa <- party_contribution %>% filter(cand_party_affiliation == "NPA")
+# npa_mapping <- ggplot(npa, aes(map_id = cand_state)) +
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = contri_party), map = fifty_states) +
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) +
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "", title = "Contribution to No party Affiliation") +
+#   theme(legend.position = "bottom",
+#         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
+#   labs(fill = "Amount of Contribution") +
+#   scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
 
 
 #mapping OTH's contribution 
-oth <- party_contribution %>% filter(cand_party_affiliation == "OTH")
-oth_mapping <- ggplot(oth, aes(map_id = cand_state)) +
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = contri_party), map = fifty_states) +
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to Other") +
-  theme(legend.position = "bottom",
-        panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
-  labs(fill = "Amount of Contribution") +
-  scale_fill_continuous (breaks = c(74, 58000, 116637), labels = c("0.074K", "58K", "116K"), low = "#B0E2FF", high = "#607B8B")
+# oth <- party_contribution %>% filter(cand_party_affiliation == "OTH")
+# oth_mapping <- ggplot(oth, aes(map_id = cand_state)) +
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = contri_party), map = fifty_states) +
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) +
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "", title = "Contribution to Other") +
+#   theme(legend.position = "bottom",
+#         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
+#   labs(fill = "Amount of Contribution") +
+#   scale_fill_continuous (breaks = c(74, 58000, 116637), labels = c("0.074K", "58K", "116K"), low = "#B0E2FF", high = "#607B8B")
 
 
 #mapping REP's contribution 
@@ -331,107 +334,115 @@ rep_mapping <- ggplot(rep, aes(map_id = cand_state)) +
 
 
 #mapping SUS's contribution
-sus <- party_contribution %>% filter(cand_party_affiliation == "SUS")
-sus_mapping <- ggplot(sus, aes(map_id = cand_state)) +
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = contri_party), map = fifty_states) +
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to Socialist Party") +
-  theme(legend.position = "bottom",
-        panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
-  labs(fill = "Amount of Contribution") +
-  scale_fill_continuous (breaks = c(250, 270, 299), labels = c("0.25K", "0.27K", "0.3K"), low = "#B0E2FF", high = "#607B8B")
+# sus <- party_contribution %>% filter(cand_party_affiliation == "SUS")
+# sus_mapping <- ggplot(sus, aes(map_id = cand_state)) +
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = contri_party), map = fifty_states) +
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) +
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "", title = "Contribution to Socialist Party") +
+#   theme(legend.position = "bottom",
+#         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
+#   labs(fill = "Amount of Contribution") +
+#   scale_fill_continuous (breaks = c(250, 270, 299), labels = c("0.25K", "0.27K", "0.3K"), low = "#B0E2FF", high = "#607B8B")
 
 
 #mapping SWP's contribution 
-swp <- party_contribution %>% filter(cand_party_affiliation == "SWP")
-swp_mapping <- ggplot(swp, aes(map_id = cand_state)) +
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = contri_party), map = fifty_states) +
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to Socialist Workers Party") +
-  theme(legend.position = "bottom",
-        panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
-  labs(fill = "Amount of Contribution") +
-  scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
-
-
-#mapping UNK's contribution
-unk <- party_contribution %>% filter(cand_party_affiliation == "UNK")
-unk_mapping <- ggplot(unk, aes(map_id = cand_state)) +
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = contri_party), map = fifty_states) +
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to UNK") +
-  theme(legend.position = "bottom",
-        panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
-  labs(fill = "Amount of Contribution") +
-  scale_fill_continuous (breaks = c(100, 140000, 280000), labels = c("0.1K", "140K", "280K"), low = "#B0E2FF", high = "#607B8B")
-
-
-#mapping WFP's contribution 
-wfp <- party_contribution %>% filter(cand_party_affiliation == "WFP")
-wfp_mapping <- ggplot(wfp, aes(map_id = cand_state)) +
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = contri_party), map = fifty_states) +
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to Working Families Party") +
-  theme(legend.position = "bottom",
-        panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
-  labs(fill = "Amount of Contribution") +
-  scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
+# swp <- party_contribution %>% filter(cand_party_affiliation == "SWP")
+# swp_mapping <- ggplot(swp, aes(map_id = cand_state)) +
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = contri_party), map = fifty_states) +
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) +
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "", title = "Contribution to Socialist Workers Party") +
+#   theme(legend.position = "bottom",
+#         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
+#   labs(fill = "Amount of Contribution") +
+#   scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
+# 
+# 
+# #mapping UNK's contribution
+# unk <- party_contribution %>% filter(cand_party_affiliation == "UNK")
+# unk_mapping <- ggplot(unk, aes(map_id = cand_state)) +
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = contri_party), map = fifty_states) +
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) +
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "", title = "Contribution to UNK") +
+#   theme(legend.position = "bottom",
+#         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
+#   labs(fill = "Amount of Contribution") +
+#   scale_fill_continuous (breaks = c(100, 140000, 280000), labels = c("0.1K", "140K", "280K"), low = "#B0E2FF", high = "#607B8B")
+# 
+# 
+# #mapping WFP's contribution 
+# wfp <- party_contribution %>% filter(cand_party_affiliation == "WFP")
+# wfp_mapping <- ggplot(wfp, aes(map_id = cand_state)) +
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = contri_party), map = fifty_states) +
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) +
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "", title = "Contribution to Working Families Party") +
+#   theme(legend.position = "bottom",
+#         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
+#   labs(fill = "Amount of Contribution") +
+#   scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
 
 ```
 
+# Contribution to Each Parties
 ```{r, message=FALSE, warning=FALSE, echo=FALSE}
 #mapping out 
 # grid.arrange( non_mapping, con_mapping, dem_mapping, dfl_mapping, gre_mapping, iap_mapping, ind_mapping, lib_mapping, nne_mapping, npa_mapping, oth_mapping, rep_mapping, sus_mapping, swp_mapping, unk_mapping, wfp_mapping, nrow = 9)
 
-non_mapping
-con_mapping
+# non_mapping
+# con_mapping
 dem_mapping
-dfl_mapping
-gre_mapping
-iap_mapping
-ind_mapping
-lib_mapping
-nne_mapping
-npa_mapping
-oth_mapping
+# dfl_mapping
+# gre_mapping
+# iap_mapping
+# ind_mapping
+# lib_mapping
+# nne_mapping
+# npa_mapping
+# oth_mapping
 rep_mapping
-sus_mapping
-swp_mapping
-unk_mapping
-wfp_mapping
+# sus_mapping
+# swp_mapping
+# unk_mapping
+# wfp_mapping
+
+two_party <-c(dem_mapping, rep_mapping)
+```
+
+```{r}
+
 ```
 
 
-
-- see choose one party and see if they have more winner or not 
-```{r, message=FALSE, warning=FALSE, echo=FALSE, fig.width = 8, fig.height= 30}
+- see choose one party and see if they have more winner or not
+# Lokking at Republican party and Dem
+```{r, message=FALSE, warning=FALSE, echo=FALSE, fig.width = 8, fig.height= 20}
 
 target <- c("R", "D")
 
 one_rep_dem <- house_elections %>%
   filter(party %in% target) 
 
-#see parties from republican and democrats the rate of elected per state
+
 rate_rep_dem <- house_elections %>%
   filter(party %in% target) %>%
   group_by(state, party) %>%
   summarise(rate_winner = sum(winner)/n() * 100) 
+
 
 #function
 R_n_D <- function(name_arg) {
@@ -456,13 +467,23 @@ do.call("grid.arrange", c(RD_plots, ncol=5))
 ```
 
 ***
+A footnote [^1]
 [^1]: https://github.com/stellali0311/sds192-mp2.git 
 
 
 
 
 
+```{r}
+#the person who received the most contribution in MA for Republican party
 
+rep_guy <- candi_conti %>%
+  filter(cand_state == "MA") %>%
+  group_by(cand_name) %>%
+  summarise(money = sum(transaction_amt)) %>%
+  arrange(desc(money)) 
+
+```
 
 
 
